--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.3",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
